samples/_failures_safe/1761074276_4ab1dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e83da69.c: In function ‘main’:
./samples/SAFE/__tmp_2e83da69.c:131:5: error: expected expression at end of input
  131 |     int count =
      |     ^~~
./samples/SAFE/__tmp_2e83da69.c:131:5: error: expected declaration or statement at end of input
